# cpp-template

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classcpp__template_1_1bar-members.html  classcpp__template_1_1bar.html  classes.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_c53bd60cb90dff279e5851ca30089ecf.html  dir_c53bd60cb90dff279e5851ca30089ecf.js  files.html  foo_8h_source.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
cmake/: conan.cmake
docs/: Doxyfile
lib/: CMakeLists.txt
lib/include/lib/: foo.h
lib/src/: foo.cpp
search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  Lib.cc  Lib.hh
src/templatelib/: LibInterface.h
src/tests/: CMakeLists.txt  TestLib.cpp
tests/: CMakeLists.txt  test_it_works.cpp
